update source for images

--- a/project2.html
+++ b/project2.html
@@ -19,7 +19,7 @@
     <div class="container">
         
         <div class="header">
-            <a href="index.html" class="logo"><img src="Images/logo.svg" alt="Logo"></img></a>
+            <a href="index.html" class="logo"><img src="images/logo.svg" alt="Logo"></img></a>
             <nav>
                 <a href="work.html" class="work">work.</a>
                 <a href="contact.html" class="contact">contact.</a>
@@ -32,14 +32,14 @@
 
 
         <div class="main_p1">
-            <img class="pictures" src="Images/behance2/1.png" alt="img1"></img></a>
-            <img class="pictures" src="Images/behance2/2.png" alt="img2"></img></a>
-            <img class="pictures" src="Images/behance2/3.png" alt="img3"></img></a>
-            <img class="pictures" src="Images/behance2/4.png" alt="img4"></img></a>
-            <img class="pictures" src="Images/behance2/5.png" alt="img5"></img></a>
-            <img class="pictures" src="Images/behance2/6.png" alt="img6"></img></a>
-            <img class="pictures" src="Images/behance2/7.png" alt="img7"></img></a>
-            <img class="pictures lastpicture" src="Images/behance2/Frame 170.png" alt="img8"></img></a>
+            <img class="pictures" src="images/behance2/1.png" alt="img1"></img></a>
+            <img class="pictures" src="images/behance2/2.png" alt="img2"></img></a>
+            <img class="pictures" src="images/behance2/3.png" alt="img3"></img></a>
+            <img class="pictures" src="images/behance2/4.png" alt="img4"></img></a>
+            <img class="pictures" src="images/behance2/5.png" alt="img5"></img></a>
+            <img class="pictures" src="images/behance2/6.png" alt="img6"></img></a>
+            <img class="pictures" src="images/behance2/7.png" alt="img7"></img></a>
+            <img class="pictures lastpicture" src="images/behance2/Frame 170.png" alt="img8"></img></a>
         </div>
     </div>
 
