--- a/project3.html
+++ b/project3.html
@@ -19,7 +19,7 @@
     <div class="container">
         
         <div class="header">
-            <a href="index.html" class="logo"><img src="Images/logo.svg" alt="Logo"></img></a>
+            <a href="index.html" class="logo"><img src="images/logo.svg" alt="Logo"></img></a>
             <nav>
                 <a href="work.html" class="work">work.</a>
                 <a href="contact.html" class="contact">contact.</a>
@@ -32,12 +32,12 @@
 
 
         <div class="main_p1">
-            <img class="pictures" src="Images/behance3/1.png" alt="img1"></img></a>
-            <img class="pictures" src="Images/behance3/2.png" alt="img2"></img></a>
-            <img class="pictures" src="Images/behance3/3.png" alt="img3"></img></a>
-            <img class="pictures" src="Images/behance3/4.png" alt="img4"></img></a>
-            <img class="pictures" src="Images/behance3/5.png" alt="img5"></img></a>
-            <img class="pictures lastpicture" src="Images/behance3/6.png" alt="img6"></img></a>
+            <img class="pictures" src="images/behance3/1.png" alt="img1"></img></a>
+            <img class="pictures" src="images/behance3/2.png" alt="img2"></img></a>
+            <img class="pictures" src="images/behance3/3.png" alt="img3"></img></a>
+            <img class="pictures" src="images/behance3/4.png" alt="img4"></img></a>
+            <img class="pictures" src="images/behance3/5.png" alt="img5"></img></a>
+            <img class="pictures lastpicture" src="images/behance3/6.png" alt="img6"></img></a>
         </div>
     </div>
 
