--- a/project4.html
+++ b/project4.html
@@ -19,7 +19,7 @@
     <div class="container">
         
         <div class="header">
-            <a href="index.html" class="logo"><img src="Images/logo.svg" alt="Logo"></img></a>
+            <a href="index.html" class="logo"><img src="images/logo.svg" alt="Logo"></img></a>
             <nav>
                 <a href="work.html" class="work">work.</a>
                 <a href="contact.html" class="contact">contact.</a>
@@ -32,9 +32,9 @@
 
 
         <div class="main_p1">
-            <img class="pictures" src="Images/behance4/1.png" alt="img1"></img></a>
-            <img class="pictures" src="Images/behance4/2.png" alt="img2"></img></a>
-            <img class="pictures lastpicture" src="Images/behance4/3.png" alt="img3"></img></a>
+            <img class="pictures" src="images/behance4/1.png" alt="img1"></img></a>
+            <img class="pictures" src="images/behance4/2.png" alt="img2"></img></a>
+            <img class="pictures lastpicture" src="images/behance4/3.png" alt="img3"></img></a>
         </div>
     </div>
 
