--- a/work.html
+++ b/work.html
@@ -19,7 +19,7 @@
     <div class="container">
         
         <div class="header">
-            <a href="index.html" class="logo"><img src="Images/logo.svg" alt="Logo"></a>
+            <a href="index.html" class="logo"><img src="images/logo.svg" alt="Logo"></a>
             <nav>
                 <a href="work.html" class="work">work.</a>
                 <a href="contact.html" class="contact">contact.</a>
@@ -54,14 +54,14 @@
                     </div>
                     
                     <div class="thumbnail thumbnail1">
-                        <img src="Images/tumbnail1.png" alt="Tumbnail1">
+                        <img src="images/tumbnail1.png" alt="Tumbnail1">
                         <a href="project1.html" class=" thumbnailbuttons thumbnailbutton1">Check it out</a>
                     </div>
                 </div>
 
                 <div class="worktitles worktitle2">
                     <div class="thumbnail thumbnail2">
-                        <img src="Images/thumbnail2.png" alt="Tumbnail2">
+                        <img src="images/thumbnail2.png" alt="Tumbnail2">
                         <a href="project2.html" class="thumbnailbuttons thumbnailbutton2">Check it out</a>
                     </div>
                     <div class="title title2">
@@ -82,14 +82,14 @@
                         </p>
                     </div>
                     <div class="thumbnail thumbnail3">
-                        <img src="Images/thumbnail3.png" alt="Tumbnail3">
+                        <img src="images/thumbnail3.png" alt="Tumbnail3">
                         <a href="project3.html" class="thumbnailbuttons thumbnailbutton3">Check it out</a>
                     </div>
                 </div>
 
                 <div class="worktitles worktitle4">
                     <div class="thumbnail thumbnail4">
-                        <img src="Images/tumbnail4.png" alt="Tumbnail4">
+                        <img src="images/tumbnail4.png" alt="Tumbnail4">
                         <a href="project4.html" class="thumbnailbuttons thumbnailbutton4">Check it out</a>
                     </div>
                     <div class="title title4">
