--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
     <div class="container">
         
         <div class="header">
-            <a href="index.html" class="logo"><img src="Images/logo.svg" alt="Logo"></img></a>
+            <a href="index.html" class="logo"><img src="images/logo.svg" alt="Logo"></img></a>
             <nav>
                 <a href="work.html" class="work">work.</a>
                 <a href="contact.html" class="contact">contact.</a>
