--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lomota Bogdan</title>
 
+    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="images/favicon/site.webmanifest">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap" rel="stylesheet">
@@ -59,12 +64,13 @@
                     </a>
             </div>
 
-            <form class="contactform">
+            <form class="contactform" onsubmit="SendMail(event)">
                 <input class="formname" placeholder="Full name" id="fullName">
                 <input class="formemail" placeholder="Email" type="email" id="email_id">
-                <textarea class="formmessage" placeholder="Your message" id="message"></textarea>
-                <button class="formbutton" type="submit" onclick="SendMail()">Send it!</button>
+                <textarea class="formmessage" placeholder="Your message" id="message"></textarea>            
+                <button class="formbutton" type="submit">Send it!</button>
             </form>
+
         </div>
     </div>
 
